@@ -1,7 +1,7 @@
-.\" 	$NetBSD: ftp.1,v 1.5 2014/10/31 18:59:33 spz Exp $
-.\" 	from	NetBSD: ftp.1,v 1.134 2012/12/22 16:57:10 christos Exp
+.\" 	$NetBSD: ftp.1,v 1.6 2015/10/04 14:44:07 tnn Exp $
+.\" 	from	NetBSD: ftp.1,v 1.135 2015/04/23 23:31:23 lukem Exp
 .\"
-.\" Copyright (c) 1996-2010 The NetBSD Foundation, Inc.
+.\" Copyright (c) 1996-2015 The NetBSD Foundation, Inc.
 .\" All rights reserved.
 .\"
 .\" This code is derived from software contributed to The NetBSD Foundation
@@ -58,7 +58,7 @@
 .\"
 .\"	@(#)ftp.1	8.3 (Berkeley) 10/9/94
 .\"
-.Dd December 22, 2012
+.Dd April 24, 2015
 .Dt FTP 1
 .Os
 .Sh NAME
@@ -85,6 +85,7 @@
 .Xc
 .Oc
 .Ek
+.Op Fl x Ar xferbufsize
 .Bk -words
 .\" [[user@]host [port]]
 .Oo
@@ -312,6 +313,12 @@ Forces
 .Nm
 to show all responses from the remote server, as well
 as report on data transfer statistics.
+.It Fl x Ar xferbufsize
+Set the size of the socket send and receive buffers to
+.Ar xferbufsize .
+Refer to
+.Ic xferbuf
+for more information.
 .El
 .Pp
 The client host with which
