@@ -1,5 +1,5 @@
-/*	$NetBSD: ftp_var.h,v 1.9 2014/10/31 18:59:33 spz Exp $	*/
-/*	from	NetBSD: ftp_var.h,v 1.82 2012/12/21 18:07:36 christos Exp	*/
+/*	$NetBSD: ftp_var.h,v 1.10 2015/10/04 14:44:07 tnn Exp $	*/
+/*	from	NetBSD: ftp_var.h,v 1.83 2015/01/12 14:17:08 christos Exp	*/
 
 /*-
  * Copyright (c) 1996-2009 The NetBSD Foundation, Inc.
@@ -174,7 +174,7 @@ enum {
 /*
  * Global defines
  */
-#define	FTPBUFLEN	MAXPATHLEN + 200
+#define	FTPBUFLEN	(4 * MAXPATHLEN)
 #define	MAX_IN_PORT_T	0xffffU
 
 #define	HASHBYTES	1024	/* default mark for `hash' command */
