@@ -1,8 +1,8 @@
-/*	$NetBSD: version.h,v 1.8 2014/10/31 18:59:33 spz Exp $	*/
-/*	from	NetBSD: version.h,v 1.85 2014/10/31 03:27:18 lukem Exp	*/
+/*	$NetBSD: version.h,v 1.9 2015/10/04 14:44:07 tnn Exp $	*/
+/*	from	NetBSD: version.h,v 1.87 2015/09/12 20:18:52 wiz Exp	*/
 
 /*-
- * Copyright (c) 1999-2009 The NetBSD Foundation, Inc.
+ * Copyright (c) 1999-2015 The NetBSD Foundation, Inc.
  * All rights reserved.
  *
  * This code is derived from software contributed to The NetBSD Foundation
@@ -35,5 +35,5 @@
 #endif
 
 #ifndef FTP_VERSION
-#define	FTP_VERSION	"20141026"
+#define	FTP_VERSION	"20150912"
 #endif
