@@ -1,6 +1,14 @@
-$NetBSD: NEWS,v 1.2 2014/11/04 22:38:26 agc Exp $
+$NetBSD: NEWS,v 1.3 2015/10/04 14:44:06 tnn Exp $
 
-This is tnftp version 20141104.
+This is tnftp version 20151004.
+
+Changes in tnftp 20141104 to 20151004:
+
+	Implement '-x xferbufsize' to set xferbuf size.
+
+	Add Server Name Indication (SNI) support for https.
+
+	Increase buffer limit used for response handling.
 
 Changes in tnftp from 20141031 to 20141104:
 
